2002-09-10  Richard Williamson (Local)  <rjw@apple.com>

        Renamed method.
        
        * WebView.subproj/WebPreferences.h:
        * WebView.subproj/WebPreferences.m:
        (-[WebPreferences _updateWebCoreSettings]):
        (-[WebPreferences setWillLoadImagesAutomatically:]):
        (-[WebPreferences willLoadImagesAutomatically]):

2002-09-10  Chris Blumenberg  <cblu@apple.com>

	Report download handler errors
	Renamed error constants
	Added new errors

        * Misc.subproj/WebDownloadHandler.h:
        * Misc.subproj/WebDownloadHandler.m:
        (-[WebDownloadHandler errorWithCode:]): added
        (-[WebDownloadHandler receivedData:]): return an error
        (-[WebDownloadHandler finishedLoading]): return an error
        (-[WebDownloadHandler cancel]): return an error
        * Misc.subproj/WebKitErrors.h: added new errors
        * WebView.subproj/WebFramePrivate.m: 
        (-[WebFrame _shouldShowURL:]): use renamed error constants
        * WebView.subproj/WebMainResourceClient.h:
        * WebView.subproj/WebMainResourceClient.m:
        (-[WebMainResourceClient receivedError:forHandle:]): don't send an error when errors are suppressed
        (-[WebMainResourceClient didCancelWithHandle:]): report download handler errors
        (-[WebMainResourceClient handleDidFinishLoading:]): report download handler errors
        (-[WebMainResourceClient handleDidReceiveData:data:]): report download handler errors
        (-[WebMainResourceClient handleDidFailLoading:withError:]): report download handler errors
        * WebView.subproj/WebView.m:
        (+[WebView initialize]): add new errors to WebError

2002-09-10  John Sullivan  <sullivan@apple.com>

        * History.subproj/WebHistoryPrivate.m:
        (-[WebHistoryPrivate _loadHistoryGuts:]):
	removed the ERROR message in the case where the history file was
	not found, as this is normal initial-state behavior.

2002-09-10  Maciej Stachowiak  <mjs@apple.com>

	WebKit part of fix for:
